# python-novice-gapminder

./: .gitignore  README.md  pyproject.toml
presentation/: slides.md  style.css
scratch/: animalia.ipynb  numpy.ipynb  plotting-and-programming-in-python.ipynb
scratch/data/: animalia.csv
